[gd_scene load_steps=9 format=2]

[ext_resource path="res://SPRITES/font_Autumn.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://SPRITES/Imagenes de fondo/New Piskel (1).png" type="Texture" id=2]
[ext_resource path="res://SPRITES/Imagenes de fondo/New Piskel.png" type="Texture" id=3]
[ext_resource path="res://SPRITES/Imagenes de fondo/label_HP_bg.png" type="Texture" id=4]
[ext_resource path="res://SPRITES/Imagenes de fondo/New Piskel (2).png" type="Texture" id=5]
[ext_resource path="res://Puntaje.gd" type="Script" id=6]

[sub_resource type="DynamicFont" id=1]
size = 25
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 25
font_data = ExtResource( 1 )

[node name="Puntaje" type="Node"]
script = ExtResource( 6 )

[node name="Player1" type="Control" parent="."]
margin_left = 96.0
margin_right = 256.0
margin_bottom = 32.0
__meta__ = {
"_edit_group_": true
}

[node name="Fondo" type="TextureRect" parent="Player1"]
margin_right = 160.0
margin_bottom = 33.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vida" type="TextureRect" parent="Player1"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="TextureRect" parent="Player1"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vida_j1" type="Label" parent="Player1"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puntaje_j1" type="Label" parent="Player1"]
margin_left = 96.0
margin_right = 160.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player2" type="Control" parent="."]
margin_left = 448.0
margin_right = 608.0
margin_bottom = 32.0
__meta__ = {
"_edit_group_": true
}

[node name="Fondo" type="TextureRect" parent="Player2"]
margin_right = 160.0
margin_bottom = 33.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vida" type="TextureRect" parent="Player2"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 3 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="TextureRect" parent="Player2"]
margin_left = 64.0
margin_right = 96.0
margin_bottom = 32.0
texture = ExtResource( 2 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Vida_j2" type="Label" parent="Player2"]
margin_left = 32.0
margin_right = 64.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puntaje_j2" type="Label" parent="Player2"]
margin_left = 96.0
margin_right = 160.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Maximo_puntaje" type="Control" parent="."]
margin_left = 303.351
margin_top = 0.595108
margin_right = 401.351
margin_bottom = 32.5951
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Fondo" type="TextureRect" parent="Maximo_puntaje"]
anchor_left = 0.4
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -39.2
margin_right = 1.0
margin_bottom = 1.0
texture = ExtResource( 4 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score_max" type="TextureRect" parent="Maximo_puntaje"]
margin_right = 32.0
margin_bottom = 32.0
texture = ExtResource( 5 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Puntaje_max" type="Label" parent="Maximo_puntaje"]
margin_left = 32.0
margin_right = 96.0
margin_bottom = 32.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0.913725, 0.823529, 0.0431373, 1 )
custom_colors/font_outline_modulate = Color( 0.909804, 0.901961, 0.0392157, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
text = "000"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}
